# home_monitoring_system_central

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c  mdns_handler.c  mdns_handler.h  udp_streamer_handler.c  udp_streamer_handler.h  udp_streamer_handler_controler.c  udp_streamer_handler_controler.h  udp_streamer_handler_receiver.c  udp_streamer_handler_receiver.h  udp_streamer_handler_receiver_message_processor.c  udp_streamer_handler_receiver_message_processor.h  udp_streamer_handler_types.h  udps_handler.c  udps_handler.h  web_handler.c  wifi_handler.c
